wsl: get rid of deprecated WSLDistribution.getUNCRoot
GitOrigin-RevId: 4279c32d94a1f29942d0beae07270d043280e86d